--- a/src/styles/Signin.css
+++ b/src/styles/Signin.css
@@ -4,20 +4,22 @@
 
 .login-container {
   position: absolute;
-  background-color: rgb(255, 255, 255);
+background-color: rgb(255, 255, 255);
+border-radius: 10px;
+margin: auto;
+display: grid;
+align-items: center;
+justify-content: center;
+min-width: 350px;
+max-width: 600px !important;
+box-shadow: 0 4px 15px #00000029 !important;
+border: 1px solid #d1d1d1 !important;
+border-radius: 8px !important;
+overflow: inherit !important;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
 
-  border-radius: 10px;
-  margin: 0 auto;
-  top: 40%;
-
-  left: 50%;
-  min-width: 350px;
-  transform: translate(-50%, -50%);
-  max-width: 600px !important;
-  box-shadow: 0 4px 15px #00000029 !important;
-  border: 1px solid #d1d1d1 !important;
-  border-radius: 8px !important;
-  overflow: inherit !important;
 }
 .login-container .login-header {
     background-color: #007bff;
