--- a/src/styles/Tests.css
+++ b/src/styles/Tests.css
@@ -1,25 +1,25 @@
-.students-action-div {
+.tests-action-div {
   margin: 20px;
   padding: 10px;
   display: flex;
 }
-.students-action-div input[type="file"] {
+.tests-action-div input[type="file"] {
   outline: 2px solid #007bff;
   font-weight: 550;
 
   border-radius: 15px;
 }
-.students-action-div input[type="file"]::file-selector-button {
+.tests-action-div input[type="file"]::file-selector-button {
   padding: 10px;
   color: white;
   font-weight: bold;
   border: none;
   background-color: #007bff;
 }
-.students-action-div:nth-child(2){
+.tests-action-div:nth-child(2){
     align-items: end;
 }
-.students-action-div .upload-button{
+.tests-action-div .upload-button{
     margin: 0 0 0 10px;
 }
 .datatable ::-webkit-scrollbar {
