Quiz questions, Timer connected to db,Score and answers inserter to db

--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -249,7 +249,7 @@ margin: 8px;    }
 }
 
 .timer-section div {
- 
+ text-align: center;
     font-size: 1.2em;
     display: flex;
     color: #555;
