--- a/client/src/pages/Home/home.module.css
+++ b/client/src/pages/Home/home.module.css
@@ -88,3 +88,20 @@
   display: flex;
   justify-content: center;
 }
+
+.createCourse {
+  display: flex;
+  margin-top: 20px;
+
+  align-items: center;
+  justify-content: space-between;
+  background-color: #007bff;
+  color: white;
+  padding: 15px 20px;
+  font-size: 1.5em;
+  font-weight: bold;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  border: 1px solid #d1d1d1;
+  margin-bottom: 20px;
+}
