--- a/client/src/pages/ManageCourse/manageCourse.module.css
+++ b/client/src/pages/ManageCourse/manageCourse.module.css
@@ -147,3 +147,12 @@
   gap: 20px;
   grid-auto-flow: column;
 }
+.hitAiButton {
+  position: relative;
+  top: 18px;
+  cursor: pointer;
+  border: 1px solid #89a8c3;
+  padding: 2px;
+  right: -415px;
+  border-radius: 2px;
+}
