--- a/client/src/pages/ManageTest/manage.module.css
+++ b/client/src/pages/ManageTest/manage.module.css
@@ -84,3 +84,12 @@ input[type="file"] {
   padding: 0% !important    ;
   width: 100% !important;
 }
+.hitAiButton {
+  position: relative;
+  top: 18px;
+  cursor: pointer;
+  border: 1px solid #89a8c3;
+  padding: 2px;
+  right: -415px;
+  border-radius: 2px;
+}
