--- a/client/src/pages/ManageTest/manage.module.css
+++ b/client/src/pages/ManageTest/manage.module.css
@@ -48,14 +48,33 @@
 }
 .testDetailsContainer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 20px;
   justify-content: center;
-  width: 70%;
-  margin: auto;
+  width: 100%;
 }
-
-.detailCard h1 {
+.instructionsContainer {
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0px 0px 2px #080c2b29, 0px 1px 4px #080c2b1f;
+  display: flex;
+  column-gap: 8px;
+  display: flex;
+  max-width: 500px;
+  width: 100%;
+  flex-direction: column;
+}
+.addInstructionBtn{
+  background: white;
+  color: black;
+  border: 1px solid #ccc;
+  margin-top: 20px;
+  width: 100%;
+}
+.addInstructionBtn:hover{
+  background-color: #e4e4e4;
+}
+.detailCardHeader h1 {
   padding: 15px;
   color: #080c2bd9;
   margin: 0;
@@ -67,7 +86,6 @@
   display: flex;
   column-gap: 8px;
   display: flex;
-
   width: 100%;
   flex-direction: column;
 }
@@ -100,7 +118,6 @@
   background: #080c2b99;
   z-index: 15;
 }
-
 /* Create Test Panel Container */
 .createTestContainer {
   display: flex;
@@ -112,7 +129,6 @@
   height: 100%;
   z-index: 20;
 }
-
 /* Panel Header */
 .createTestHeader {
   display: flex;
@@ -126,7 +142,6 @@
   padding: 16px;
   margin: 0;
 }
-
 /* Form Container */
 .createTestForm {
   margin: auto;
@@ -134,7 +149,6 @@
   max-width: 600px;
   padding: 0 20px 10px 20px;
 }
-
 /* Panel Style */
 .createTestPanel {
   position: relative;
@@ -144,7 +158,6 @@
   border-radius: 6px 0px 0px 6px;
   overflow-y: auto;
 }
-
 /* Selected Groups Display */
 .selectedGroups {
   display: flex;
@@ -153,7 +166,6 @@
   gap: 5px;
   margin-top: 10px;
 }
-
 .selectedGroup {
   background: linear-gradient(86.73deg, #3696e5 0.38%, #7424dc 98.88%);
   color: white;
@@ -162,23 +174,19 @@
   display: inline-flex;
   align-items: center;
 }
-
 .removeGroupButton {
   background: none;
   color: white;
   border: none;
   padding: 5px 5px;
-
   font-weight: bold;
   margin: 0 0 0 5px;
   cursor: pointer;
 }
-
 /* Group Dropdown */
 .groupSelector {
   position: relative;
 }
-
 .groupDropdown {
   position: absolute;
   top: 100%;
@@ -191,16 +199,13 @@
   background-color: white;
   z-index: 10;
 }
-
 .groupItem {
   padding: 8px;
   cursor: pointer;
 }
-
 .groupItem:hover {
   background-color: #f0f0f0;
 }
-
 /* File Input Style */
 .createTestForm input[type="file"]::file-selector-button {
   padding: 10px;
@@ -209,12 +214,10 @@
   border: none;
   background-color: #007bff;
 }
-
 .createTestForm input[type="file"] {
   padding: 0 !important;
   width: 100% !important;
 }
-
 /* Footer Button Layout */
 .buttonContainer {
   display: grid;
@@ -223,12 +226,12 @@
   gap: 20px;
   grid-auto-flow: column;
   border-top: 1px solid #e1e1e3;
-  padding:  10px;
+  padding: 10px;
 }
-.cancelButton{
-    background: #f5f5f7 !important;
-                  border: 1px solid #e1e1e3;
-                  color: #080c2bd9;
+.cancelButton {
+  background: #f5f5f7 !important;
+  border: 1px solid #e1e1e3;
+  color: #080c2bd9;
 }
 .hitAiButton {
   position: relative;
