--- a/client/src/assets/styles/components.css
+++ b/client/src/assets/styles/components.css
@@ -1,6 +1,13 @@
 /* Navbar */
 .navbar {
- background: linear-gradient(90deg, rgb(114 41 221 / 58%) 0%, rgb(80 103 224 / 47%) 50%, rgb(80 103 224 / 48%) 81.11%, rgb(34 184 229 / 66%) 100%); color: white;
+  background: linear-gradient(
+    90deg,
+    rgb(114 41 221 / 58%) 0%,
+    rgb(80 103 224 / 47%) 50%,
+    rgb(80 103 224 / 48%) 81.11%,
+    rgb(34 184 229 / 66%) 100%
+  );
+  color: white;
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -14,9 +21,14 @@
   display: flex;
   align-items: center;
 }
-
+.active-nav{
+   font-weight: bold;
+  color: #1a73e8;
+  border-bottom: 2px solid #ffffff;
+}
 .navbar .nav-links a,
 .nav-links span {
+  padding: 10px;
   color: white;
   cursor: pointer;
   text-decoration: none;
@@ -105,6 +117,7 @@
 }
 
 .modal-container .modal-buttons {
+  margin-top: 20px;
   display: flex;
   justify-content: end;
 }
@@ -148,13 +161,12 @@
 }
 
 .card-header {
-  background-color: #007bff;
-  color: white;
   margin: 0;
   border-radius: 8px 8px 0 0 !important;
-  min-height: 100px;
+  border-bottom: 1px solid #e1e1e3;
+
   display: flex;
-  justify-content: center;
+  padding: 20px;
   align-items: center;
   text-align: center;
 }
