--- a/client/src/pages/Test/test.module.css
+++ b/client/src/pages/Test/test.module.css
@@ -4,6 +4,9 @@
   padding: 20px;
 }
 .testApp {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   flex: 1;
   max-width: 1000px;
   margin: 100px auto;
@@ -94,8 +97,16 @@ textarea.fillAnswerInput {
   text-align: center;
   margin-top: 20px;
   color: #555;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+
+  /* display: flex;
+ flex-direction: column;
+ justify-content: center; */
+}
+.testFooter div {
+  display: flex;
+  margin: 0 20px;
+  justify-content: center;
+  flex-direction: row;
 }
 .skipButton {
   background-color: #113bc4;
@@ -108,6 +119,12 @@ textarea.fillAnswerInput {
 }
 .submitButton:hover {
   background-color: #09633d;
+}
+.sideBar {
+  gap: 30px;
+
+  display: flex;
+  flex-direction: column;
 }
 /* Timer Section */
 .timerSection {
@@ -146,7 +163,7 @@ textarea.fillAnswerInput {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: #333;
   font-weight: bold;
 }
