--- a/client/src/assets/styles/components.css
+++ b/client/src/assets/styles/components.css
@@ -21,8 +21,8 @@
   display: flex;
   align-items: center;
 }
-.active-nav{
-   font-weight: bold;
+.active-nav {
+  font-weight: bold;
   color: #1a73e8;
   border-bottom: 2px solid #ffffff;
 }
@@ -56,6 +56,7 @@
 
 .profile-info {
   list-style: none;
+  padding-left: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -74,7 +75,18 @@
   display: flex;
   margin: 8px;
 }
-
+.logout-btn {
+  background-color: #7972b3;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+  border: none;
+  border-radius: 6px;
+  padding: 10px 20px;
+  width: 100%;
+  cursor: pointer;
+  font-size: medium;
+  transition: background-color 0.3s ease;
+}
 /* Modal */
 .modal-background {
   position: fixed;
